# cone-packaging

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  automake.fix  cone.spec  cone.spec.in  cone_0.69.orig.tar.gz.delta  cone_0.69.orig.tar.gz.id  cone_0.70.orig.tar.gz.delta  cone_0.70.orig.tar.gz.id  cone_0.71.orig.tar.gz.delta  cone_0.71.orig.tar.gz.id  cone_0.72.orig.tar.gz.delta  cone_0.72.orig.tar.gz.id  cone_0.74.orig.tar.gz.delta  cone_0.74.orig.tar.gz.id  cone_0.75.orig.tar.gz.delta  cone_0.75.orig.tar.gz.id  cone_0.77.orig.tar.gz.delta  cone_0.77.orig.tar.gz.id  cone_0.79.orig.tar.gz.delta  cone_0.79.orig.tar.gz.id  cone_0.80.orig.tar.gz.delta  cone_0.80.orig.tar.gz.id  cone_0.84.orig.tar.gz.delta  cone_0.84.orig.tar.gz.id  cone_0.89.orig.tar.gz.delta  cone_0.89.orig.tar.gz.id  config.h.in  configure  configure.in  dbobj.config.in  sysconftool
cone/: APPLICATION.PDF.filter.in  ChangeLog  IMAGE.filter.in  Makefile.am  Makefile.in  acl.C  acl.H  aclocal.m4  addressbook.C  addressbook.H  addressbookinterface.C  addressbookinterface.H  addressbookinterfaceldap.C  addressbookinterfaceldap.H  addressbookinterfacemail.C  addressbookinterfacemail.H  certificates.C  certificates.H  colors.C  colors.H  colors_inc.h  cone.C  cone.dist.in  config.h.in  configscreen.C  configscreen.H  configure  configure.in  ctrlchandler.C  ctrlchandler.H  cursesaddresslist.C  cursesaddresslist.H  cursesattachmentdisplay.C  cursesattachmentdisplay.H  cursesedit.C  cursesedit.H  curseseditmessage.C  curseseditmessage.H  curseshierarchy.C  curseshierarchy.H  (+106 more)
cone/html/: FAQ.html  INSTALL.html  README.html  account-checknewmail.html  account-copymessagesto.html  account-createfolder.html  account-deletefolder.html  account-delrights.html  account-getfolderfrompath.html  account-getfolderfromstring.html  account-getfolderindexinfo.html  account-getfolderindexsize.html  account-getfolderkeywordinfo.html  account-getmessagecontent.html  account-login.html  (+150 more)
curses/: Makefile.am  Makefile.in  configure  configure.in  curses.C  curses_config.h.in  cursesbutton.C  cursesbutton.H  curseschoicebutton.C  curseschoicebutton.H  cursescontainer.C  cursescontainer.H  cursesdialog.C  cursesdialog.H  cursesfield.C  cursesfield.H  cursesfilereq.C  cursesfilereq.H  curseskeyhandler.C  curseskeyhandler.H  curseslabel.C  curseslabel.H  cursesmainscreen.C  cursesmainscreen.H  cursesmoronize.C  cursesmoronize.H  cursesmultilinelabel.C  cursesmultilinelabel.H  cursesobject.C  cursesobject.H  cursesscreen.C  cursesscreen.H  cursesstatusbar.C  cursesstatusbar.H  cursestitlebar.C  cursestitlebar.H  cursesvscroll.C  cursesvscroll.H  mycurses.H  timer.C  (+1 more)
debian/: changelog  control  copyright  orig-tar.sh  preinst  rules  watch
gpglib/: Makefile.am  Makefile.in  README.html  checksign.c  config.h.in  configure  configure.in  delete.c  export.c  fork.c  genkey.c  gpg.c  gpglib.h  import.c  libgpg.c  list.c  mimegpg.1  mimegpg.c  mimegpg.html  mimegpgfork.c  mimegpgfork.h  mimegpgheader.c  mimegpgheader.h  mimegpgstack.c  mimegpgstack.h  options.c  rfc2045.c  sign.c  tempname.c  tempname.h  testgpg.c  webgpg.in
ldapaddressbook/: Makefile.am  Makefile.in  abookadd.c  abookdel.c  abookfind.c  abookread.c  abooksearch.c  config.h.in  configure  configure.in  ldapaddressbook.dist  ldapaddressbook.h  ldapsearch.c  libldapsearch.c  libldapsearch.h  noldapsearch.c
libhmac/: Makefile.am  Makefile.in  config.h.in  configure  configure.in
liblock/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  lockdaemon.c  lockmail.1  lockmail.html
libmail/: Makefile.am  Makefile.in  addmessage.C  addmessage.H  addmessageimport.C  addmessageremoveattachments.C  addressbook.C  addressbook.H  addressbookadd.C  addressbookadd.H  addressbookget.C  addressbookget.H  addressbookopen.C  addressbookopen.H  addressbooksearch.C  addressbooksearch.H  attachments.C  attachments.H  autodecoder.C  autodecoder.H  autodeps.C  base64.C  base64.H  configure  configure.in  copymessage.C  copymessage.H  decoder.C  decoder.H  driver.C  driver.H  envelope.C  envelope.H  expungelist.C  expungelist.H  fd.C  fd.H  fdtls.C  fdtls.H  file.C  (+178 more)
maildir/: Makefile.am  Makefile.in  README.sharedfolders.html  README.sharedfolders.txt  config.h.in  configure  configure.in  deliverquota.8.in  deliverquota.html.in  maildir.5  maildir.html  maildiracl.1.in  maildiracl.html.in  maildirfilter.c  maildirfilter2.c  maildirkeywords2.c  maildirkw.1  maildirkw.html  maildirmake.1.in  maildirmake.html.in  maildirnewshared2.c  maildirquota.7  maildirquota.c  maildirquota.h  maildirquota.html  maildirshared.c  testsuite2.txt
md5/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  md5_hash.c
numlib/: Makefile.am  Makefile.in  config.h.in  configure
random128/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
rfc1035/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  spf.c  testsuite.txt
rfc2045/: Makefile.am  Makefile.in  configure  configure.in  makemime.1  makemime.html  reformime.1  reformime.c  reformime.html  rfc2045.3  rfc2045.html  rfc2045_config.h.in  rfc2045_fromfd.c  rfc2045reply.c  rfc2646.h  rfc2646create.c
rfc822/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  imaprefs.c  rfc822.3  rfc822.c  rfc822.html  rfc822_getaddr.c  testsuite.c
rootcerts/: Makefile.am  Makefile.in  aclocal.m4  certs.sh  configure  configure.in  mkcerts.pl
sha1/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  sha1.c  sha1.h  sha1_hash.c  sha256.c  testsuite.c  testsuite.txt
soxwrap/: Makefile.am  Makefile.in  configure  configure.in  mksocket.c  soxwrap_config.h.in
tcpd/: Makefile.am  Makefile.in  config.h.in  configure  configure.in  couriertcpd.1  couriertcpd.html  couriertls.1  couriertls.html  libcouriergnutls.c  libcouriertls.c  libcouriertls.h  starttls.c  tcpd.c  tlsclient.c  tlspasswordcache.c
unicode/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  eucjp.c  ksx1001.c  shiftjis.c  unicode.h  unicode_config.h.in
(+115 files in other folders)
