# $Id: Makefile.am,v 1.11 2005/06/19 13:15:28 mrsam Exp $
#
# Copyright 1998 - 2004 Double Precision, Inc.  See COPYING for
# distribution information.

AUTOMAKE = srcdir=${srcdir} @SHELL@ ${srcdir}/../automake.fix @AUTOMAKE@

CLEANFILES=$(noinst_DATA)
noinst_LTLIBRARIES=libnumlib.la

libnumlib_la_SOURCES=\
	atotimet.c \
	atouidt.c \
	changeuidgid.c \
	numlib.h \
	strdevt.c \
	strgidt.c \
	strhdevt.c \
	strhinot.c \
	strhpidt.c \
	strhtimet.c \
	strinot.c \
	strofft.c \
	strpidt.c \
	strsize.c \
	strsizet.c \
	strtimet.c \
	struidt.c
