#$Id: Makefile.am,v 1.7 2005/06/19 13:15:28 mrsam Exp $
#
# Copyright 1998 - 2005 Double Precision, Inc.  See COPYING for
# distribution information.

AUTOMAKE = srcdir=${srcdir} @SHELL@ ${srcdir}/../automake.fix @AUTOMAKE@

noinst_LTLIBRARIES=librandom128.la

librandom128_la_SOURCES=random128.c random128.h random128alpha.c \
	random128binary.c
